[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.5"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
log = "0.4.22"
dotenvy = "0.15.7"
